--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -794,7 +794,7 @@
     "x=1\n",
     "for i in numerical_columns:\n",
     "    sns.histplot(data=data, x=i, kde=True)\n",
-    "    print(\"\\n\")\n",
+    "    print(\"/n\")\n",
     "    plt.show()"
    ]
   },
@@ -868,7 +868,7 @@
     "\n",
     "sns.countplot(data= data)\n",
     "plt.legend()\n",
-    "print(\"\\n\")\n",
+    "print(\"/n\")\n",
     "plt.show()"
    ]
   },
@@ -1475,6 +1475,13 @@
    "source": [
     "data.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
